fix: test (#7)
* fix(tests): fix mock